--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "version": "0.0.1",
   "private": true,
-  "license": "Apache Version 2.0",
+  "license": "Apache-2.0",
   "author": "Nate Lewis",
   "scripts": {
     "lint": "eslint \"**/*.js\" --fix; true",
@@ -32,5 +32,6 @@
   },
   "engines": {
     "node": "7"
-  }
+  },
+  "main": "index.js"
 }
