project no longer private

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "buffer"
   ],
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "license": "Apache-2.0",
   "author": "Nate Lewis",
   "scripts": {
